--- a/BullyBookWeb/Views/Category/Index.cshtml
+++ b/BullyBookWeb/Views/Category/Index.cshtml
@@ -3,7 +3,19 @@
     ViewData["Title"] = "Category Index";
 }
 
-<h1>@ViewData["Title"]</h1>
+<div class="container p-2">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h4 class="text-primary">@ViewData["Title"]</h4>
+        </div>
+        <div class="col-6 text-end">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                <i class="bi bi-plus-circle"></i> &nbsp; Create new Category
+            </a>
+        </div>
+    </div>
+</div>
+<br />
 
 <table class="table table-bordered table-striped" style="width:100%">
     <thead>
