Update(33-37): Create View, FildValidation and client Side

--- a/BullyBookWeb/Views/Category/Index.cshtml
+++ b/BullyBookWeb/Views/Category/Index.cshtml
@@ -34,7 +34,7 @@
                     @obj.Name
                 </td>
                 <td width="30%">
-                    @obj.DysplayOrder
+                    @obj.DisplayOrder
                 </td>
             </tr>
         }
