--- a/BullyBookWeb/Views/Category/Edit.cshtml
+++ b/BullyBookWeb/Views/Category/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Category
 @{
-    ViewData["Title"] = "Create Category";
+    ViewData["Title"] = "Edit Category";
 }
 
-<form method="post">
+<form method="post" asp-action="Edit">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">@ViewData["Title"]</h2>
@@ -21,7 +21,7 @@
             <input asp-for="DisplayOrder" class="form-control"/>
             <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
+        <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
         <a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">
             Back to list
         </a>
