--- a/BullyBookWeb/Views/Category/Index.cshtml
+++ b/BullyBookWeb/Views/Category/Index.cshtml
@@ -24,6 +24,7 @@
                 Category Name
             </th>
             <th>Display Order</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -35,6 +36,11 @@
                 </td>
                 <td width="30%">
                     @obj.DisplayOrder
+                </td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                    <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"><i class="bi bi-pencil-square"></i>Edit</a>
+                    </div>
                 </td>
             </tr>
         }
