--- a/BullyBookWeb/Views/Category/Index.cshtml
+++ b/BullyBookWeb/Views/Category/Index.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Category Index";
 }
 
+
+
 <div class="container p-2">
     <div class="row pt-4">
         <div class="col-6">
@@ -40,6 +42,8 @@
                 <td>
                     <div class="w-75 btn-group" role="group">
                     <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"><i class="bi bi-pencil-square"></i>Edit</a>
+                    <div class="w-75 btn-group" role="group">
+                    <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id"><i class="bi bi-trash-fill"></i>Delete</a>
                     </div>
                 </td>
             </tr>
