Update: Upsert of Products

--- a/BullyBookWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BullyBookWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -10,7 +10,7 @@
             <h4 class="text-primary">@ViewData["Title"]</h4>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="Product" asp-action="Create" class="btn btn-primary">
+            <a asp-controller="Product" asp-action="Upsert" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> &nbsp; Create new Product
             </a>
         </div>
