--- a/BullyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BullyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,13 +1,9 @@
 ﻿@model BullyBook.Models.ViewModels.ProductVM
 
-@{
-    ViewData["Title"] = "Edit Product";
-}
-
 <form method="post" asp-action="Upsert" enctype="multipart/form-data">
     <div class="border p-3 mt-4 row">
         <div class="row pb-2">
-            <h2 class="text-primary">@ViewData["Title"]</h2>
+            <h2 class="text-primary">@(Model.Product.Id !=0? "Update" : "Create") Product</h2>
             <hr />
         </div>
         <div class="mb-3">
@@ -52,7 +48,7 @@
         </div>
         <div class="mb-3">
             <label asp-for="Product.ImageUrl"></label>
-            <input type="file" class="form-select">            
+            <input type="file" id="uploadBox" name="file" class="form-select">            
         </div>
         <div class="mb-3 col-6">
             <label asp-for="Product.CoverTypeId"></label>
@@ -61,8 +57,23 @@
             </select>
             <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
         </div>
+        <div class="mb-3 col-6">
+            <label asp-for="Product.CategoryId"></label>
+            <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select">
+                <option disabled selected>--Select Category--</option>
+            </select>
+            <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+        </div>
         <div class="col-12">
-            <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
+            @if(Model.Product.Id!=0)
+            {
+                <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
+
+            } 
+            else
+            {
+                <button type="submit" class="btn btn-primary" onclick="return ValidateInput()" style="width:150px">Create</button>
+            }
             <a asp-controller="Cover Type" asp-action="Index" class="btn btn-secondary" style="width:150px">
                 Back to list
             </a>
@@ -76,4 +87,17 @@
 @{
     <partial name="_ValidationScriptsPartial" />
 }
+<script>
+    function ValidateInput(){
+        if (document.getElementById("uploadBox").value == "") {
+            Swal.fire({
+                icon: 'error',
+                title: 'Oops...',
+                text: 'Please upload an Image!',
+            });
+            return false;
+        }   
+        return true
+    }
+</script>
 }
