--- a/BullyBookWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BullyBookWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -18,7 +18,7 @@
 </div>
 <br />
 
-<table class="table table-bordered table-striped" style="width:100%">
+<table id="tblData" class="table table-bordered table-striped" style="width:100%">
     <thead>
         <tr>
             <th>Product</th>
@@ -31,3 +31,7 @@
     </thead>
     
 </table>
+
+@section Scripts{
+    <script src="~/js/product.js"></script>
+}
