--- a/BullyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BullyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,11 +1,17 @@
 ﻿@model BullyBook.Models.ViewModels.ProductVM
 
 <form method="post" asp-action="Upsert" enctype="multipart/form-data">
-    <div class="border p-3 mt-4 row">
-        <div class="row pb-2">
+    <input asp-for="Product.Id" hidden />
+    <input asp-for="Product.ImageUrl" hidden />
+
+    <div class="row">
+        <div class="col-10">
+            <div class="border p-3 mt-4 row">
+        <div class="col-12 pb-2">
             <h2 class="text-primary">@(Model.Product.Id !=0? "Update" : "Create") Product</h2>
             <hr />
         </div>
+        
         <div class="mb-3">
             <label asp-for="Product.Title"></label>
             <input asp-for="Product.Title" class="form-control"/>
@@ -79,6 +85,13 @@
             </a>
         </div>
     </div>
+        </div>
+        <div class="col-2 pt-4">
+            <img src="@Model.Product.ImageUrl" style="width:100%; border-radius:5px; border:1px solid #bbb9b9"
+        </div>
+    </div>
+
+    
 
 </form>
 
