--- a/BullyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BullyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -80,7 +80,7 @@
             {
                 <button type="submit" class="btn btn-primary" onclick="return ValidateInput()" style="width:150px">Create</button>
             }
-            <a asp-controller="Cover Type" asp-action="Index" class="btn btn-secondary" style="width:150px">
+            <a asp-controller="Product" asp-action="Index" class="btn btn-secondary" style="width:150px">
                 Back to list
             </a>
         </div>
@@ -101,6 +101,15 @@
     <partial name="_ValidationScriptsPartial" />
 }
 <script>
+    tinymce.init({
+      selector: 'textarea',
+      plugins: 'a11ychecker advcode casechange export formatpainter image editimage linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tableofcontents tinycomments tinymcespellchecker',
+      toolbar: 'a11ycheck addcomment showcomments casechange checklist code export formatpainter image editimage pageembed permanentpen table tableofcontents',
+      toolbar_mode: 'floating',
+      tinycomments_mode: 'embedded',
+      tinycomments_author: 'Vinicius Gaio',
+    });
+
     function ValidateInput(){
         if (document.getElementById("uploadBox").value == "") {
             Swal.fire({
@@ -112,5 +121,6 @@
         }   
         return true
     }
+    
 </script>
 }
