--- a/BullyBookWeb/Views/Shared/_Layout.cshtml
+++ b/BullyBookWeb/Views/Shared/_Layout.cshtml
@@ -69,6 +69,8 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdn.tiny.cloud/1/v4pm2mazo2hwaa6kb15zi2wem7oqfjr21b8creyite3cth8u/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
